<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    tools:context=".ui.auth.Registro">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="131dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/rFullname"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints="name"
        android:drawableStart="@drawable/person_24"
        android:background="@drawable/round_corners"
        android:capitalize="words"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textCapWords"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/rEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/email_24"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:hint="@string/ejemplo_gmail_com"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rFullname" />

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/round_corners"
        app:passwordToggleEnabled="true"
        android:drawableStart="@drawable/lock_24"
        android:drawableEnd="@drawable/visibility_off_24"
        android:longClickable="false"
        android:maxLength="15"
        android:ems="8"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rEmail" />

    <EditText
        android:id="@+id/phoneNumber1"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="phone"
        android:drawableStart="@drawable/contact_phone_24"
        android:background="@drawable/round_corners"
        android:maxLength="10"
        android:ems="8"
        android:hint="@string/numero_telef_nico"
        android:inputType="number|phone"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />

    <EditText
        android:id="@+id/rBirthdate"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:drawableStart="@drawable/contact_calendar_24"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/Birthdate"
        android:inputType="date"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber1" />

    <Button
        android:id="@+id/BRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/registrarse"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rBirthdate" />

    <TextView
        android:id="@+id/Iniciasesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/ya_te_registraste_inicia_sesi_n"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BRegister" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Iniciasesion" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="389dp"
        tools:layout_editor_absoluteY="251dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>